# apertium-eng-deu

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  apertium-eng-deu.deu-eng.lrx  apertium-eng-deu.deu-eng.lsx  apertium-eng-deu.deu-eng.t1x  apertium-eng-deu.deu-eng.t2x  apertium-eng-deu.deu-eng.t3x  apertium-eng-deu.eng-deu.dix  apertium-eng-deu.eng-deu.lrx  apertium-eng-deu.eng-deu.lsx  apertium-eng-deu.eng-deu.t1x  apertium-eng-deu.eng-deu.t2x  apertium-eng-deu.eng-deu.t3x  configure.ac  deu-eng.prob  eng-deu.prob  expand_bidix.xls  expand_bidix.xsl  modes.xml  regression-tests.sh  test_deu.txt  test_deu_output.txt  test_eng.txt  test_eng_output.txt
dev/: rule_overview.sh  separable_deu-eng.txt  separable_deu.txt  separable_deu_lex.txt  separable_deu_output.txt  separable_deu_separate.txt  separable_eng-deu.txt  separable_eng_lex.txt  separable_eng_separate.txt  story.deu.txt
t/: config.sh  config.sh.in  latest-pending.results  latest-regression.results
test/: deu-eng-autoseq2-expected.txt  deu-eng-disam-expected.txt  deu-eng-generator-expected.txt  deu-eng-interchunk-expected.txt  deu-eng-lex-expected.txt  deu-eng-morph-expected.txt  deu-eng-postgen-gold.txt  eng-deu-autoseq-expected.txt  eng-deu-biltrans-expected.txt  eng-deu-chunker-expected.txt  eng-deu-disam-expected.txt  eng-deu-generator-expected.txt  eng-deu-morph-expected.txt  eng-deu-pending-autoseq-expected.txt  eng-deu-pending-chunker-expected.txt  eng-deu-pending-disam-expected.txt  eng-deu-pending-generator-expected.txt  eng-deu-pending-input.txt  eng-deu-postgen-gold.txt  (+20 more)
(+16 files in other folders)
